# BIP-

./: .gitignore  BIP_REVIEW.md  EMOJI_SELECTION_REPORT.md  README.md  SCANNER_README.md  TODO.md  base58_frequency.py  demo.py  demo_stego.py  display.html  download_test_images.py  emoji_codec.py  emoji_frequency.py  pyproject.toml  scanner.html  scrape_emoji.py  select_test_sample.py  visual_similarity.py
data/: base58_emoji_mapping.json  base58_emoji_mapping_stego.json  confusable_pairs.json  emoji_metadata.json  test_sample.json  top_candidates.json
