# BIP Emoji - Dependencies managed by uv
# Usage: uv pip install -r pyproject.toml

[project]
name = "bip-emoji"
version = "0.1.0"
description = "Bitcoin Improvement Proposal for Emoji Address Encoding"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "imagehash>=4.3.1",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
